--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -5,7 +5,7 @@
 		
 		<AssemblyName>AlephNote.Common</AssemblyName>
 		<PackageId>AlephNote.Common</PackageId>
-		
+
 		<NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
 		<PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
 		
@@ -21,9 +21,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.0.0" />
-		<PackageReference Include="System.Net.Http" Version="4.3.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
+		<PackageReference Include="System.Net.Http" Version="4.3.3" />
 		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
 	</ItemGroup>
@@ -33,8 +33,9 @@
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
 		<PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0" />
+		<PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
 	</ItemGroup>
 
 </Project>
