--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Log\EventLogger.cs" />
     <Compile Include="Log\LogEvent.cs" />
     <Compile Include="Log\LogEventType.cs" />
+    <Compile Include="WPF\Converter\TagToBorderBrush.cs" />
+    <Compile Include="WPF\Util\MarkdownHighlighter.cs" />
     <Compile Include="WPF\Util\DefaultHighlighter.cs" />
     <Compile Include="WPF\BindingProxies\AbstractLegacyBinding.cs" />
     <Compile Include="WPF\BindingProxies\AbstractRawBinding.cs" />
@@ -141,6 +143,7 @@
     <Compile Include="WPF\Services\MultiDatatemplateService.cs" />
     <Compile Include="WPF\Services\WatermarkAdorner.cs" />
     <Compile Include="WPF\Services\WatermarkService.cs" />
+    <Compile Include="WPF\Util\ScintillaHighlighter.cs" />
     <Compile Include="WPF\Windows\AboutWindowViewmodel.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
