--- a/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
+++ b/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
@@ -6,10 +6,12 @@
     <AssemblyName>HeadlessPlugin</AssemblyName>
     <PackageId>HeadlessPlugin</PackageId>
     
-    <AssemblyVersion>1.1.2.0</AssemblyVersion>
-    <FileVersion>1.1.2.0</FileVersion>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
 
     <OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
+
+    <RootNamespace>AlephNote.Plugins.Headless</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
