--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -292,7 +292,10 @@
       <Name>AlephNote.PluginInterface</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\ui_off.png" />
+    <None Include="Resources\ui_on.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
