--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -296,6 +296,9 @@
     <None Include="Resources\ui_off.png" />
     <None Include="Resources\ui_on.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LoremIpsum.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
