--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        AlephNote
 tagline:      An extensible, lightweight desktop note client for multiple backends
-baseurl:      "/Mikescher/AlephNote"
+baseurl:      "/AlephNote"
 paginate:     1
 
 # About/contact
