--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -148,6 +148,7 @@
     <Compile Include="WPF\Services\WatermarkAdorner.cs" />
     <Compile Include="WPF\Services\WatermarkService.cs" />
     <Compile Include="WPF\Util\ScintillaHighlighter.cs" />
+    <Compile Include="WPF\Util\ScintillaSearcher.cs" />
     <Compile Include="WPF\Windows\AboutWindowViewmodel.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
