--- a/Source/Plugins/NextcloudPlugin/NextcloudPlugin.csproj
+++ b/Source/Plugins/NextcloudPlugin/NextcloudPlugin.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj" />
+    <ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj"><Private>false</Private></ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
