--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlephNote</RootNamespace>
     <AssemblyName>AlephNote</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -127,10 +127,13 @@
     <Compile Include="WPF\Converter\SnippetsToSnippetSource.cs" />
     <Compile Include="WPF\Converter\TagsToPlaceholder.cs" />
     <Compile Include="WPF\Converter\TagToBorderBrush.cs" />
+    <Compile Include="WPF\Services\ConditionalControlTemplate.cs" />
+    <Compile Include="WPF\Services\MultiControlTemplateService.cs" />
     <Compile Include="WPF\Shortcuts\GlobalShortcutManager.cs" />
     <Compile Include="WPF\Shortcuts\ObservableShortcutConfig.cs" />
     <Compile Include="WPF\Shortcuts\ShortcutManager.cs" />
     <Compile Include="WPF\Util\HelpTextsLoader.cs" />
+    <Compile Include="WPF\Util\HierachicalBaseWrapper.cs" />
     <Compile Include="WPF\Util\IChangeListener.cs" />
     <Compile Include="WPF\Util\MarkdownHighlighter.cs" />
     <Compile Include="WPF\Util\DefaultHighlighter.cs" />
@@ -186,13 +189,14 @@
     <Compile Include="WPF\MVVM\TwoWayConverter.cs" />
     <Compile Include="WPF\MVVM\TypedRelayCommand.cs" />
     <Compile Include="WPF\Services\ConditionalDataTemplate.cs" />
-    <Compile Include="WPF\Services\MultiDatatemplateService.cs" />
+    <Compile Include="WPF\Services\MultiDataTemplateService.cs" />
     <Compile Include="WPF\Services\WatermarkAdorner.cs" />
     <Compile Include="WPF\Services\WatermarkService.cs" />
     <Compile Include="WPF\Util\MenuItemContainerTemplateSelector.cs" />
     <Compile Include="WPF\Util\NotesListViewTemplateSelector.cs" />
     <Compile Include="WPF\Util\ScintillaHighlighter.cs" />
     <Compile Include="WPF\Util\ScintillaSearcher.cs" />
+    <Compile Include="WPF\Util\WPFHelper.cs" />
     <Compile Include="WPF\Windows\AboutWindowViewmodel.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
@@ -369,6 +373,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\HelpTexts.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\folder_all.png" />
+    <Resource Include="Resources\folder_any.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
